[package]
name = "linuxcnc-hal-sys"
version = "0.2.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
documentation = "https://docs.rs/linuxcnc-hal-sys"
description = "Generated, unsafe Rust bindings to the LinuxCNC HAL submodule"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = [ "cnc", "linuxcnc", "bindgen", "ffi" ]
categories = [ "external-ffi-bindings", "science::robotics" ]
repository = "https://github.com/jamwaffles/linuxcnc-hal-rs"
include = [
    "**/*.rs",
    "patch/**/*",
    "Cargo.toml",
    "wrapper.h",
    "linuxcnc-src/src",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
circle-ci = { repository = "jamwaffles/linuxcnc-hal-rs", branch = "master" }

[dependencies]

[build-dependencies]
bindgen = "0.52.0"
cc = "1.0.50"

[dev-dependencies]
signal-hook = "0.1.13"
