[package]
name = "linuxcnc-hal-sys"
version = "0.2.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
documentation = "https://docs.rs/linuxcnc-hal-sys"
description = "Generated, unsafe Rust bindings to the LinuxCNC HAL submodule"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = [ "cnc", "linuxcnc", "bindgen", "ffi" ]
categories = [ "external-ffi-bindings", "science::robotics" ]
repository = "https://github.com/jamwaffles/linuxcnc-hal-rs"
include = [
    "**/*.rs",
    "patch/**/*",
    "Cargo.toml",
    "wrapper.h",
    "linuxcnc-src/src",
    "README.md",
]

# Realtime components must be compiled as cdylibs
[[example]]
name = "rtapi"
crate-type = [ "cdylib" ]

[badges]
circle-ci = { repository = "jamwaffles/linuxcnc-hal-rs", branch = "master" }

[dependencies]
log = "0.4.14"

[build-dependencies]
bindgen = "0.57.0"
cc = "1.0.66"

[dev-dependencies]
signal-hook = "0.3.4"
rtapi-logger = { path = "../rtapi-logger", version = "0.1.0" }
