[package]
name = "linuxcnc-hal"
version = "0.1.1"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
documentation = "https://docs.rs/linuxcnc-hal"
description = "A safe, high level interface to LinuxCNC's HAL submodule"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = [ "cnc", "linuxcnc" ]
categories = [ "api-bindings" ]
repository = "https://github.com/jamwaffles/linuxcnc-hal-rs"

[badges]
circle-ci = { repository = "jamwaffles/linuxcnc-hal-rs", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linuxcnc-hal-sys = "0.1.5"
signal-hook = "0.1.13"
libc = "0.2.66"
thiserror = "1.0.9"
log = "0.4.8"
