[package]
name = "linuxcnc-hal"
version = "0.2.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
documentation = "https://docs.rs/linuxcnc-hal"
description = "A safe, high level interface to LinuxCNC's HAL submodule"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = [ "cnc", "linuxcnc" ]
categories = [ "api-bindings" ]
repository = "https://github.com/jamwaffles/linuxcnc-hal-rs"

[badges]
circle-ci = { repository = "jamwaffles/linuxcnc-hal-rs", branch = "master" }

# Realtime components must be compiled as cdylibs
[[example]]
name = "rtapi"
crate-type = [ "cdylib" ]

[dependencies]
signal-hook = "0.1.13"
libc = "0.2.66"
thiserror = "1.0.10"
log = "0.4.8"

[dependencies.linuxcnc-hal-sys]
version = "^0.2.0"
path = "../linuxcnc-hal-sys"

[dev-dependencies]
pretty_env_logger = "0.4.0"
