[package]
name = "linuxcnc-hal"
version = "0.2.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2021"
documentation = "https://docs.rs/linuxcnc-hal"
description = "A safe, high level interface to LinuxCNC's HAL submodule"
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = [ "cnc", "linuxcnc" ]
categories = [ "api-bindings" ]
repository = "https://github.com/jamwaffles/linuxcnc-hal-rs"

[badges]
circle-ci = { repository = "jamwaffles/linuxcnc-hal-rs", branch = "master" }

# Realtime components must be compiled as cdylibs
[[example]]
name = "rtapi"
crate-type = [ "cdylib" ]

[dependencies]
libc = "0.2.137"
linuxcnc-hal-sys = { path = "../linuxcnc-hal-sys", version = "0.2.0" }
log = "0.4.17"
signal-hook = "0.3.14"
thiserror = "1.0.37"

[dev-dependencies]
rtapi-logger = { path = "../rtapi-logger", version = "0.1.0" }
