[package]
name = "rtapi-logger"
version = "0.1.0"
edition = "2018"
authors = ["James Waples <james@wapl.es>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linuxcnc-hal-sys = { path = "../linuxcnc-hal-sys", version = "0.2.0" }
log = "0.4.14"
